--- a/Insagram-clone/Login.html
+++ b/Insagram-clone/Login.html
@@ -12,10 +12,10 @@
       referrerpolicy="no-referrer"
     />
     <link
-      rel="icon"
-      type="image/x-icon"
-      href="https://www.freepnglogos.com/uploads/music-logo-black-and-white-png-21.png"
-    />
+    rel="icon"
+    type="image/x-icon"
+    href="https://www.digitalinsightfoundation.org/_app/immutable/assets/dif_img.9be40b60.png"
+  />
     <title>[DIF] instagram</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -125,7 +125,7 @@ button {
     <main class="flex justify-center items-center text-center mt-0 ml-3 mr-3 mb-0 h-full">
       <div class="main-container  w-2/5 mt-1 rounded-3xl h-2/4 text-white flex justify-center items-center flex-col">
         <img src="https://www.digitalinsightfoundation.org/_app/immutable/assets/dif_img.9be40b60.png" alt=""  class=" h-44 w-44 mt-1 -mb-10">
-        <form action="" onsubmit="return validateForm()" class="flex flex-col h-80 w-11/12 mt-20 -mb-10 text-left">
+        <form action="" onsubmit="return validateForm()" method="POST" class="flex flex-col h-80 w-11/12 mt-20 -mb-10 text-left">
           <label for="" id="valid1" class="">Email,username OR mobile number</label>
           <input type="text" placeholder="Email,username OR mobile number" id="email" name="email"  autocomplete="off" class=" h-10 rounded-md w-full mt-2 mb-5 bg-transparent text-white pr-5 pl-5 pt-0 pb-0"/>
           <label for="" id="valid3">Password</label>
