--- a/Insagram-clone/FrontEnd/INSTA-PAGE/Index.html
+++ b/Insagram-clone/FrontEnd/INSTA-PAGE/Index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
-    <link rel="stylesheet" href="./CSS/main.css">
+    <link
+    rel="icon"
+    type="image/x-icon"
+    href="https://www.digitalinsightfoundation.org/_app/immutable/assets/dif_img.9be40b60.png"
+  />
+  <title>[DIF] instagram</title>    <link rel="stylesheet" href="./CSS/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   </head>
   <body>
