UI of Instagram that i maked with 0%HTML , 30%CSS , 70%JS this is only completed 30% i will add functionality in this soon

--- a/Insagram-clone/FrontEnd/INSTA-PAGE/Index.html
+++ b/Insagram-clone/FrontEnd/INSTA-PAGE/Index.html
@@ -8,7 +8,8 @@
     type="image/x-icon"
     href="https://www.digitalinsightfoundation.org/_app/immutable/assets/dif_img.9be40b60.png"
   />
-  <title>[DIF] instagram</title>    <link rel="stylesheet" href="./CSS/main.css">
+  <title>[DIF] instagram</title>    
+  <link rel="stylesheet" href="./CSS/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   </head>
   <body>
